--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
       <vg-fullscreen></vg-fullscreen>
     </vg-controls>
 
-    <video [vgMedia]="media" #media id="singleVideo" preload="auto" crossorigin>
+    <video [vgMedia]="$any(media)" #media id="singleVideo" preload="auto" crossorigin>
       <source src="http://static.videogular.com/assets/videos/videogular.mp4" type="video/mp4">
       <source src="http://static.videogular.com/assets/videos/videogular.ogg" type="video/ogg">
       <source src="http://static.videogular.com/assets/videos/videogular.webm" type="video/webm">
